--- a/public/help.html
+++ b/public/help.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My WebSite</title>
+        <title>Help Page</title>
     </head>
-        
     <body>
-        {{> header }}
+        <h1>Help Page</h1>
         <p>Some Text here..</p>
-        
-        {{> footer}}
     </body>
 </html>
